Permit non prison codes for get job classification endpoint